--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pigeonpoopcoin-landing-page",
+  "name": "pigeonpoopcoin-($poop)-landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
